--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 - More integration specs
-- NFA -> DFA minimization using the subset construction algorithm (or another, if there is one).
-  - Integration tests should be matching against both the DFA + NFA matching techniques
-- Google Protocol buffer output for DFA state table. Conversion of the buffer to a regex.
+- Integration tests should be matching against both the DFA + NFA matching techniques
+- DFA minimization
 - Unicode support
 - Empty regexs (//) should be matched by an empty string
-- Get rid of NFA transition table in favor of DFA transition table
+- Google Protocol buffer output for DFA state table. Conversion of the buffer to a regex.  Waiting on Antelope (or should that support go into antelope?)
